<resources>
    <string name="app_name">Smittesporing</string>
    <string name="tab_title_tracking">Bevegelse</string>
    <string name="tab_title_share">Del</string>
    <string name="tracking_not_active">Sporing er ikke aktiv.</string>
    <string name="tracking_activate_tracking_button_text">Aktiver sporing</string>
    <string name="dialog_require_location_message">For at denne tjenesten skal være nytting må vi spore lokasjonen din. Vil du at vi skal spore lokasjonen din og gi deg fortløpende COVID19-informasjon?</string>
    <string name="dialog_require_location_title">Tilgang til lokasjonsdata</string>
    <string name="generic_no">Nei</string>
    <string name="generic_yes">Ja</string>
    <string name="tracking_button_is_active">Avbryt sporing</string>
    <string name="menu_symptoms">Symptomer</string>
    <string name="tab_title_symptoms">Symptomer</string>
    <string name="channel_name">Generelle varsler</string>
    <string name="channel_description">Generelle varsler fra Smittesporing</string>
    <string name="background_notification_title">Smittesporing</string>
    <string name="background_notification_message">Smittesporing sporer lokasjonen din i bakgrunnen.</string>
    <string name="tracking_location_privacy_notice">Lokasjonsdata lagres lokalt inntil du velger å dele disse.</string>
    <string name="tracking_is_active">Sporing er aktiv.</string>
    <string name="tracking_header">Bevegelser</string>
    <string name="symptoms_header">Symptomer</string>
    <string name="symptoms_no_information">Du har ikke lagt inn noe informasjon.</string>
    <string name="symptoms_register_information_button">Registrer informasjon</string>
    <string name="risk_group_question">Er du i en <u>risikogruppe</u>?</string>
    <string name="symptoms_register_info_title">Registrer informasjon</string>
    <string name="about_you">Om deg</string>
    <string name="symptoms_biological_gender">Biologisk kjønn</string>
    <string name="gender_male">Mann</string>
    <string name="gender_female">Kvinne</string>
    <string name="gender_rather_not_say">Vil ikke oppgi</string>
    <string name="age">Alder</string>
    <string name="enter_age">Skriv inn alder</string>
    <string name="yes">Ja</string>
    <string name="no">Nei</string>
    <string name="symptoms_tested_question">Har du fått påvist smitte av COVID-19?</string>
    <string name="next">Neste</string>
    <string name="cancel">Avbryt</string>
    <string name="symptoms_possible_infection_sources">Mulige smittekilder</string>
    <string name="symptoms_suspect_infection_question">Har du mistanke om at du er smittet?</string>
    <string name="symptoms_in_contact_with_infected_question">Har du vært i kontakt med noen som har testet positivt for smitte av COVID-19?</string>
    <string name="symptoms_outside_north_question">Har du vært utenfor Norden de siste 14 dagene?</string>
    <string name="back">Tilbake</string>
    <string name="symptoms">Symptomer</string>
    <string name="symptoms_list_question">Har du noen av følgende symptomer? (kryss av)</string>
    <string name="symptom_coughing">Tørrhoste</string>
    <string name="symptom_tired">Slitenhet eller utmattelse</string>
    <string name="symptom_fever">Feber</string>
    <string name="symptom_heavy_breathing">Tung pust</string>
    <string name="symptom_muscle_pains">Muskelsmerter</string>
    <string name="symptom_diare">Diaré</string>
    <string name="save">Lagre</string>
    <string name="summary">Oppsummering</string>
    <string name="summary_info">Dette er en oppsummering av det du fylte inn.</string>
    <string name="summary_about_you">Om deg</string>
    <string name="summary_possible_infections">Mulige smittekilder</string>
    <string name="summary_symptoms">Symptomer</string>
    <string name="save_changes">Registrer endring</string>
    <string name="share_data">Del data</string>
    <string name="symptoms_back_to_norway_qustion">Når kom du tilbake til Norge?</string>
    <string name="pick_date">Velg dato</string>
    <string name="select_date">Velg dato</string>
    <string name="no_dont_know">Nei / Vet ikke</string>
    <string name="symptoms_last_contact_with_infected">Når var du i kontakt med smittede?</string>
    <string name="years">år</string>

    <string name="summary_in_risk_group">i risikogruppe</string>
    <string name="summary_in_risk_group_not"><i>ikke</i> i risikogruppe</string>
    <string name="summary_infected_info">Har fått påvist smitte</string>
    <string name="summary_infected_not_info">Har ikke fått påvist smitte</string>
    <string name="summary_in_contact_with_infected_info">Har vært i kontakt med person som har testet positivt for COVID-19</string>
    <string name="summary_in_contact_with_infected_not_info">Har ikke vært i kontakt med person som har testet positivt for COVID-19</string>
    <string name="summary_been_outside_nordic_info">Har vært utenfor Norden de siste 14 dagene</string>
    <string name="summary_been_outside_nordic_not_info">Har ikke vært utenfor Norden de siste 14 dagene</string>
    <string name="none">Ingen</string>
    <string name="delete_information">Slett informasjon</string>
    <string name="symptoms_registrered_information_info">Du har allerede lagt inn informasjon. Dersom du opplever endring i symptomer bør du registrere disse.</string>
    <string name="register_change">Registrer endring</string>
    <string name="tada">🎉</string>
    <string name="tracking_active_thanks">Smittesporing er aktivert. Takk for at\ndu bidrar!</string>
</resources>
