<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="110dp">


            <TextView
                android:id="@+id/title"
                style="@style/textTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:text="@string/symptoms_register_info_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subtitle"
                style="@style/textTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/symptoms"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/title"
                app:layout_constraintStart_toStartOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/progressBackground" />

            <TextView
                android:id="@+id/gender"
                style="@style/textBasic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/symptoms_list_question"
                app:layout_constraintEnd_toEndOf="@+id/subtitle"
                app:layout_constraintStart_toStartOf="@+id/subtitle"
                app:layout_constraintTop_toBottomOf="@+id/subtitle" />

            <RadioGroup
                android:id="@+id/symptomsGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/subtitle"
                app:layout_constraintStart_toStartOf="@+id/gender"
                app:layout_constraintTop_toBottomOf="@+id/gender">


                <CheckBox
                    android:id="@+id/symptoms1"
                    style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:gravity="center"
                    android:lineHeight="22dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/symptom_coughing"
                    android:textFontWeight="500"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/symptoms2"
                    style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:gravity="center"
                    android:lineHeight="22dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/symptom_tired"
                    android:textFontWeight="500"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/symptoms3"
                    style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:gravity="center"
                    android:lineHeight="22dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/symptom_fever"
                    android:textFontWeight="500"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/symptoms4"
                    style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:gravity="center"
                    android:lineHeight="22dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/symptom_heavy_breathing"
                    android:textFontWeight="500"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/symptoms5"
                    style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:gravity="center"
                    android:lineHeight="22dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/symptom_muscle_pains"
                    android:textFontWeight="500"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/symptoms6"
                    style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:gravity="center"
                    android:lineHeight="22dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/symptom_diare"
                    android:textFontWeight="500"
                    android:textSize="18sp" />

            </RadioGroup>

            <View
                android:id="@+id/progressBackground"
                android:layout_width="0dp"
                android:layout_height="9dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/progress_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <View
                android:id="@+id/progressForeground"
                android:layout_width="0dp"
                android:layout_height="7dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:background="@drawable/progress_foreground"
                app:layout_constraintBottom_toBottomOf="@+id/progressBackground"
                app:layout_constraintEnd_toEndOf="@+id/progressBackground"
                app:layout_constraintStart_toStartOf="@+id/progressBackground"
                app:layout_constraintTop_toTopOf="@+id/progressBackground" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/saveButton"
        style="@style/primaryButton"
        android:layout_width="0dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/step3BackButton" />

    <Button
        android:id="@+id/step3BackButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/secondary_button_background"
        android:backgroundTint="@color/white"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="2dp" />

    <View
        android:id="@+id/buttonsBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="-16dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/step3BackButton" />


</androidx.constraintlayout.widget.ConstraintLayout>