<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="110dp">

            <TextView
                android:id="@+id/title"
                style="@style/textTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:text="@string/symptoms_register_info_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subtitle"
                style="@style/textTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/about_you"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/title"
                app:layout_constraintStart_toStartOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/progressBackground" />

            <TextView
                android:id="@+id/gender"
                style="@style/textBasic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/symptoms_biological_gender"
                app:layout_constraintStart_toStartOf="@+id/subtitle"
                app:layout_constraintTop_toBottomOf="@+id/subtitle" />

            <RadioGroup
                android:id="@+id/gender_group"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/selection_group_outline"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintEnd_toEndOf="@+id/subtitle"
                app:layout_constraintStart_toStartOf="@+id/gender"
                app:layout_constraintTop_toBottomOf="@+id/gender">

                <RadioButton
                    android:id="@+id/gender_male"
                    style="@style/textButtonPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:text="@string/gender_male"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="18sp"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeStepGranularity="1sp"
                    android:textColor="@color/radio_flat_text_selector" />

                <RadioButton
                    android:id="@+id/gender_female"
                    style="@style/textButtonPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:text="@string/gender_female"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="18sp"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeStepGranularity="1sp"
                    android:textColor="@color/radio_flat_text_selector" />

                <RadioButton
                    android:id="@+id/gender_other"
                    style="@style/textButtonPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="18sp"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeStepGranularity="1sp"
                    android:text="@string/gender_rather_not_say"
                    android:textColor="@color/radio_flat_text_selector" />

            </RadioGroup>

            <TextView
                android:id="@+id/age"
                style="@style/textBasic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/age"
                app:layout_constraintStart_toStartOf="@+id/gender_group"
                app:layout_constraintTop_toBottomOf="@+id/gender_group" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ageInput"
                style="@style/inputOutlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:helperTextEnabled="false"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="@+id/gender_group"
                app:layout_constraintStart_toStartOf="@+id/age"
                app:layout_constraintTop_toBottomOf="@+id/age">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_age"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/risikogruppeLabel"
                style="@style/textBasic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/risk_group_question"
                app:layout_constraintEnd_toEndOf="@+id/ageInput"
                app:layout_constraintStart_toStartOf="@+id/ageInput"
                app:layout_constraintTop_toBottomOf="@+id/ageInput" />

            <RadioGroup
                android:id="@+id/riskGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/selection_group_outline"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="@+id/risikogruppeLabel"
                app:layout_constraintStart_toStartOf="@+id/risikogruppeLabel"
                app:layout_constraintTop_toBottomOf="@+id/risikogruppeLabel">

                <RadioButton
                    android:id="@+id/riskGroupYes"
                    style="@style/textButtonPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:text="@string/yes"
                    android:textColor="@color/radio_flat_text_selector" />

                <RadioButton
                    android:id="@+id/riskGroupNo"
                    style="@style/textButtonPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:text="@string/no"
                    android:textColor="@color/radio_flat_text_selector" />

            </RadioGroup>

            <TextView
                android:id="@+id/testedLabel"
                style="@style/textBasic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/symptoms_tested_question"
                app:layout_constraintEnd_toEndOf="@+id/riskGroup"
                app:layout_constraintStart_toStartOf="@+id/riskGroup"
                app:layout_constraintTop_toBottomOf="@+id/riskGroup" />

            <RadioGroup
                android:id="@+id/testedGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/selection_group_outline"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="@+id/testedLabel"
                app:layout_constraintStart_toStartOf="@+id/testedLabel"
                app:layout_constraintTop_toBottomOf="@+id/testedLabel">

                <RadioButton
                    android:id="@+id/testedYes"
                    style="@style/textButtonPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:text="@string/yes"
                    android:textColor="@color/radio_flat_text_selector" />

                <RadioButton
                    android:id="@+id/testedNo"
                    style="@style/textButtonPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:text="@string/no"
                    android:textColor="@color/radio_flat_text_selector" />

            </RadioGroup>

            <View
                android:id="@+id/progressBackground"
                android:layout_width="0dp"
                android:layout_height="9dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/progress_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <View
                android:id="@+id/progressForeground"
                android:layout_width="7dp"
                android:layout_height="7dp"
                android:layout_marginStart="1dp"
                android:background="@drawable/progress_foreground"
                app:layout_constraintBottom_toBottomOf="@+id/progressBackground"
                app:layout_constraintStart_toStartOf="@+id/progressBackground"
                app:layout_constraintTop_toTopOf="@+id/progressBackground" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/step1nextButton"
        style="@style/primaryButton"
        android:layout_width="0dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/step1BackButton" />

    <Button
        android:id="@+id/step1BackButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/secondary_button_background"
        android:backgroundTint="@color/white"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/step1nextButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="2dp" />

    <View
        android:id="@+id/buttonsBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="-16dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/step1BackButton" />


</androidx.constraintlayout.widget.ConstraintLayout>